[gd_scene load_steps=2 format=3 uid="uid://cnia8sr0rfoqb"]

[ext_resource type="Script" path="res://src/tools/npc_viewer.gd" id="1_script"]

[node name="NPCViewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="HSplit" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 300

[node name="LeftPanel" type="Panel" parent="HSplit"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="HSplit/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="HSplit/LeftPanel/VBox"]
layout_mode = 2
text = "NPC/Creature Viewer"
horizontal_alignment = 1

[node name="LoadBtn" type="Button" parent="HSplit/LeftPanel/VBox"]
layout_mode = 2
text = "Load Data"

[node name="Sep1" type="HSeparator" parent="HSplit/LeftPanel/VBox"]
layout_mode = 2

[node name="SearchEdit" type="LineEdit" parent="HSplit/LeftPanel/VBox"]
layout_mode = 2
placeholder_text = "Search by name or ID..."
clear_button_enabled = true

[node name="FilterRow" type="HBoxContainer" parent="HSplit/LeftPanel/VBox"]
layout_mode = 2

[node name="FilterNPCs" type="CheckBox" parent="HSplit/LeftPanel/VBox/FilterRow"]
layout_mode = 2
button_pressed = true
text = "NPCs"

[node name="FilterCreatures" type="CheckBox" parent="HSplit/LeftPanel/VBox/FilterRow"]
layout_mode = 2
button_pressed = true
text = "Creatures"

[node name="NPCList" type="ItemList" parent="HSplit/LeftPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanel" type="Panel" parent="HSplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="HSplit/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="ViewportContainer" type="SubViewportContainer" parent="HSplit/RightPanel/VBox"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
stretch = true

[node name="Viewport" type="SubViewport" parent="HSplit/RightPanel/VBox/ViewportContainer"]
handle_input_locally = false
size = Vector2i(800, 600)
render_target_update_mode = 4

[node name="ControlPanel" type="HBoxContainer" parent="HSplit/RightPanel/VBox"]
layout_mode = 2

[node name="RotateLabel" type="Label" parent="HSplit/RightPanel/VBox/ControlPanel"]
layout_mode = 2
text = "Rotate:"

[node name="RotateSlider" type="HSlider" parent="HSplit/RightPanel/VBox/ControlPanel"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 360.0
step = 1.0

[node name="ZoomLabel" type="Label" parent="HSplit/RightPanel/VBox/ControlPanel"]
layout_mode = 2
text = "Zoom:"

[node name="ZoomSlider" type="HSlider" parent="HSplit/RightPanel/VBox/ControlPanel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 1.0
max_value = 10.0
step = 0.1
value = 3.0

[node name="TabContainer" type="TabContainer" parent="HSplit/RightPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="InfoPanel" type="Panel" parent="HSplit/RightPanel/VBox"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="InfoText" type="RichTextLabel" parent="HSplit/RightPanel/VBox/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
scroll_following = true

[node name="AnimPanel" type="Panel" parent="HSplit/RightPanel/VBox"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="AnimList" type="ItemList" parent="HSplit/RightPanel/VBox/AnimPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayBtn" type="Button" parent="HSplit/RightPanel/VBox/AnimPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -32.0
offset_right = 50.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "Play Animation"

[node name="BonePanel" type="Panel" parent="HSplit/RightPanel/VBox"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="BoneTree" type="Tree" parent="HSplit/RightPanel/VBox/BonePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Info" type="Panel" parent="HSplit/RightPanel/VBox/TabContainer"]
layout_mode = 2

[node name="InfoText" type="RichTextLabel" parent="HSplit/RightPanel/VBox/TabContainer/Info"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[node name="Animations" type="Panel" parent="HSplit/RightPanel/VBox/TabContainer"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="HSplit/RightPanel/VBox/TabContainer/Animations"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimList" type="ItemList" parent="HSplit/RightPanel/VBox/TabContainer/Animations/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayBtn" type="Button" parent="HSplit/RightPanel/VBox/TabContainer/Animations/VBox"]
layout_mode = 2
text = "Play Animation"

[node name="Bones" type="Panel" parent="HSplit/RightPanel/VBox/TabContainer"]
layout_mode = 2

[node name="BoneTree" type="Tree" parent="HSplit/RightPanel/VBox/TabContainer/Bones"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0

[node name="StatusLabel" type="Label" parent="StatusBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "Ready"
vertical_alignment = 1
